Make sure that BlockSpacing Option does not affect child blocks

--- a/src/extensions/advanced-controls/styles/editor.scss
+++ b/src/extensions/advanced-controls/styles/editor.scss
@@ -10,10 +10,10 @@
 			}
 		}
 
-		.editor-block-list__block-edit {
+		> .editor-block-list__block-edit {
 			margin-top: 0 !important;
 		}
-		
+
 	}
 
 	.wp-block.editor-block-list__block[data-no-bottom-margin="1"]:not(:last-child) {
@@ -27,7 +27,7 @@
 			}
 		}
 
-		.editor-block-list__block-edit {
+		> .editor-block-list__block-edit {
 			margin-bottom: 0 !important;
 		}
 
